  of any browser. Web browsers in mobile application might have the 'WebKit' string in its user agent.
- The addCondition and clearCondition method of INTERMediator class has "label" property for stabilizing.
- Progress information is changed as more simple gear style icon and gray background.
- Some functions are moved to INTER-Mediator-Navi, and refactored them.
- [BUG FIX] IMLibContext class's getDataAtLastRecord method had a bug (wrong parameters for getValue).
- [BUG FIX] MediaAccess class didn't work for privileged access with users.
- [BUG FIX] INTERMediator.partialConstructing property wasn't appropriate value in doAfterProcessing method.
- [BUG FIX] Customized button names on the pagination control didn't work correctly.
- [BUG FIX] The INTERMediatorOnPage.doBeforeConstruct method won't be called other than just after page loaded.
- [BUG FIX] INTERMediator.clearCondition sometimes clears all condition if a parameter is set.
- [BUG FIX] MySQL PDO driver holds the keyword of SQL with quote characters.
- [BUG FIX] Justify the compatibility of the Master/Detail Style UI and additional conditions.
- [BUG FIX] The DB_Null class's setupConnection() method returned false, but it prevent to following processing.
- [BUG FIX] The source of context is a SQL's VIEW, fields in associated records can't be updated in some cases.
- [BUG FIX] Fixed not to work on Windows Server until Ver.5.5-dev.
- [BUG FIX] The format function or INTERMediatorLib.numberFormat method returned ".0" in case of zero value.
            Now they return "0.0".
- [BUG FIX] JS Wideget support samples are modified as the correct local variable capture style.
- [BUG FIX] MediaAccess with Authentication by email account didn't work well, it fixed.
- [BUG FIX] Sending mail on reading can retrieves queried data.
- [BUG FIX] The confirm.php in User_Enroll folder had a query condition bug.
- [BUG FIX] The definition file editor didn't work until ver.5.5-dev or around.