@@ -1430,7 +1430,8 @@ var INTERMediator = {
                     targetRecords = contextObj.getPortalRecords();
                     if (!targetRecords) {
                         useLimit = contextObj.isUseLimit();
-                        recordNumber = contextObj.getRecordNumber();
+                        recordNumber = INTERMediator.pagedSize > 0 ? INTERMediator.pagedSize
+                            : contextObj.getRecordNumber();
                         targetRecords = INTERMediator_DBAdapter.db_query({
                             'name': contextObj.contextDefinition['name'],
                             'records': isNaN(recordNumber) ? 100000000 : recordNumber,
