@@ -1,1 +1,1 @@
-{"version":"5.6-RC2","releasedate":"2017-05-04"}
+{"version":"5.6-RC2","releasedate":"2017-05-13"}
